// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal content it matches snapshot with no props 1`] = `
<ModalContent>
  <div
    className="content"
  >
    Content
  </div>
</ModalContent>
`;

exports[`Modal content it matches snapshot with props 1`] = `
<ModalContent
  className="className"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <div
    className="content className"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    Content
  </div>
</ModalContent>
`;

exports[`Modal footer it matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="content className"
    style="display: inline;"
  >
    Content
  </div>
</DocumentFragment>
`;
